# RW-fetch

./: .gitignore  README.md  compexec.sh  compile_rust.sh  config.py  convert.py  out.txt  profile_output.txt  purge_cache.py  rw_fetch.py
rw_fetch_rs/: Cargo.toml
rw_fetch_rs/src/: config.rs  main.rs  sysinfo_fetchers.rs
